# lowtran

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .lgtm.yml  .mypy.ini  .travis.yml  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  DemoLowtran.py  HorizontalTransmittance.py  MANIFEST.in  Makefile.f2py  README.md  README.rst  Radiance.py  RunLowtran.m  ScatterRadiance.py  SolarIrradiance.py  TAPE5  TAPE6  TAPE6_0.ref  TAPE6_Transmittance.ref  ThermalRadiance.py  TransmittanceGround2Space.py  UserDataHorizontal.py  UserDataHorizontalRadiance.py  UserDataHorizontalTransmittance.py  UserHorizontalTransmittance.py  Wavelength2LowtranWavenumber.py  assert.f90  assert_legacy.f90  buildfile.m  lowtran.m  lowtran7.1.f  lowtran7.11  lowtran7.12  lowtran7.3  (+19 more)
+lowtran/: TestLowtran.m  plot_transmission.m  transmission.m
+lowtran/private/: xarray2mat.m
.github/workflows/: ci.yml  ci_unix.yml  ci_windows.yml
archive/: .travis.yml  TAPE1
cmake/: compilers.cmake  f2py.cmake
example/: HorizontalTransmittance.py  ScatterRadiance.py  SolarIrradiance.py  ThermalRadiance.py  TransmittanceGround2Space.py  UserDataHorizontalRadiance.py  UserHorizontalTransmittance.py  Wavelength2LowtranWavenumber.py
lowtran/: CMakeLists.txt  __init__.py  base.py  plots.py  pylowtran7.py
matlab/: RunLowtran.m  lowtran_groud2space.m  lowtran_horizaltrans.m  lowtran_transmission.m  plot_transmission.m
reference/: TAPE1_Tail.ref  lowtran7.10.f  lowtran7.13.f  lowtran7.14  lowtran7.15  lowtran7.16  lowtran7.2  lowtran_driver.f  lowtran_driver.f90
src/: assert.f90  lowtran7.f  lowtran_driver.f90
src/lowtran/: CMakeLists.txt  __init__.py  base.py  cmake.py  plot.py  plots.py  scenarios.py
src/lowtran/cmake/: compilers.cmake  f2py.cmake  f2pyTarget.cmake  options.cmake
src/lowtran/tests/: test_compilers.sh  test_horiz.py  test_lowtran.m  test_matlab.py  test_mod.py  test_scenarios.py  testfort_solarrad.asc
test/: lowtran_driver.f90  test.py
tests/: test.py  test_all.py  test_horiz.py  test_lowtran.m  test_matlab.py  test_mod.py  test_scenarios.py  testfort_solarrad.asc  testfort_trans.asc
