[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lowtran"
version = "3.1.0"
description = " Model of Earth atmosphere absorption and transmission vs. wavelength and location."
keywords = ["mesosphere", "stratosphere", "thermosphere", "atmosphere"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Programming Language :: Fortran",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["readme"]
requires-python = ">=3.8"
dependencies = ["numpy", "xarray", "python-dateutil"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy", "types-python-dateutil"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src", "example"]
allow_redefinition = true
show_error_context = false
show_column_numbers = true
ignore_missing_imports = true
