[metadata]
name = lowtran
version = 2.4.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Model of Earth atmosphere absorption and transmission vs. wavelength and location.
url = https://github.com/space-physics/lowtran
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  HorizontalTransmittance.py
  ThermalRadiance.py
  UserHorizontalTransmittance.py
  ScatterRadiance.py
  TransmittanceGround2Space.py
  Wavelength2LowtranWavenumber.py
  SolarIrradiance.py
  UserDataHorizontalRadiance.py
install_requires =
  python-dateutil
  numpy >= 1.16
  xarray

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn

[options.entry_points]
console_scripts =
  HorizontalTransmittance = HorizontalTransmittance:main
  ScatterRadiance = ScatterRadiance:main
  SolarIrradiance = SolarIrradiance:main
  ThermalRadiance = ThermalRadiance:main
  TransmittanceGround2Space = TransmittanceGround2Space:main
  UserDataHorizontalRadiance = UserDataHorizontalRadiance:main
  UserHorizontalTransmittance = UserHorizontalTransmittance:main
  Wavelength2LowtranWavenumber = Wavelength2LowtranWavenumber:main
