[metadata]
name = lowtran
version = 2.5.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Model of Earth atmosphere absorption and transmission vs. wavelength and location.
url = https://github.com/space-physics/lowtran
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
scripts =
  HorizontalTransmittance.py
  ThermalRadiance.py
  UserHorizontalTransmittance.py
  ScatterRadiance.py
  TransmittanceGround2Space.py
  Wavelength2LowtranWavenumber.py
  SolarIrradiance.py
  UserDataHorizontalRadiance.py
install_requires =
  python-dateutil
  numpy >= 1.16
  xarray
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
